docs/pages/versions/v55.0.0/sdk/video.mdx
---
title: 视频（expo-video）
description: 一个提供用于在应用中实现视频播放 API 的库。
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-video'
packageName: 'expo-video'
iconUrl: '/static/images/packages/expo-video.png'
platforms: ['android', 'ios', 'web', 'tvos', 'expo-go']
searchRank: 10
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ConfigPluginExample, ConfigPluginProperties } from '~/ui/components/ConfigSection';
import { SnackInline } from '~/ui/components/Snippet';
import { PlatformTags } from '~/ui/components/Tag/PlatformTags';

`expo-video` 是一个适用于 React Native 和 Expo 的跨平台、高性能视频组件，并支持 Web。

## 已知问题&ensp;<PlatformTags platforms={['android']} />

当两个 [`VideoView`](#videoview) 组件重叠，且它们的 [`contentFit`](#contentfit) 属性设置为 [`cover`](#videocontentfit) 时，其中一个视频可能会显示到边界之外。这是一个[已知的上游问题](https://github.com/androidx/media/issues/1107)。要解决此问题，请使用 [`surfaceType`](#surfacetype) 属性并将其设置为 [`textureView`](#surfacetype-1)。

## 安装

<APIInstallSection />

## 在应用配置中进行配置

如果你的项目使用配置插件（[Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)），你可以使用 `expo-video` 内置的 [配置插件](/config-plugins/introduction/) 来进行配置。该插件允许你配置一些无法在运行时设置、且需要构建新的应用二进制文件后才会生效的属性。如果你的应用**不**使用 CNG，那么你需要手动配置该库。

<ConfigPluginExample>
```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-video",
        {
          "supportsBackgroundPlayback": true,
          "supportsPictureInPicture": true
        }
      ]
    ],
  }
}
```
</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'supportsBackgroundPlayback',
      description:
        '一个布尔值，用于启用后台播放支持。如果为 `true`，在 iOS 上会将 `audio` 键添加到 **Info.plist** 文件中的 `UIBackgroundModes` 数组。如果为 `false`，则移除该键。当为 `undefined` 时，不会修改该键。在 Android 上，当为 `true` 时会添加前台服务权限，并在 AndroidManifest.xml 中创建一个 expo-video 前台服务。',
      default: 'undefined',
    },
    {
      name: 'supportsPictureInPicture',
      description:
        '一个布尔值，用于在 Android 和 iOS 上启用画中画。如果为 `true`，会在 Android 上启用 `android:supportsPictureInPicture` 属性，并在 iOS 的 **Info.plist** 文件中将 `audio` 键添加到 `UIBackgroundModes` 数组。如果为 `false`，则移除该键。当为 `undefined` 时，不会修改配置。',
      default: 'undefined',
    },
  ]}
/>

## 用法

下面是一个带有播放和暂停按钮的视频简单示例。

<SnackInline label='视频' dependencies={['expo-video']}>

```jsx
import { useEvent } from 'expo';
import { useVideoPlayer, VideoView } from 'expo-video';
import { StyleSheet, View, Button } from 'react-native';

const videoSource =
  'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4';

export default function VideoScreen() {
  const player = useVideoPlayer(videoSource, player => {
    player.loop = true;
    player.play();
  });

  const { isPlaying } = useEvent(player, 'playingChange', { isPlaying: player.playing });

  return (
    <View style={styles.contentContainer}>
      <VideoView
        style={styles.video}
        player={player}
        fullscreenOptions={{ enable: true }}
        allowsPictureInPicture
      />
      <View style={styles.controlsContainer}>
        <Button
          title={isPlaying ? '暂停' : '播放'}
          onPress={() => {
            if (isPlaying) {
              player.pause();
            } else {
              player.play();
            }
          }}
        />
      </View>
    </View>
  );
}

const styles = StyleSheet.create({
  contentContainer: {
    flex: 1,
    padding: 10,
    alignItems: 'center',
    justifyContent: 'center',
    paddingHorizontal: 50,
  },
  video: {
    width: 350,
    height: 275,
  },
  controlsContainer: {
    padding: 10,
  },
});
```

</SnackInline>

### 接收事件

[`VideoPlayer`](#videoplayer) 属性的变化不会更新 React 状态。因此，要显示有关 `VideoPlayer` 当前状态的信息，必须监听它发出的[事件](#videoplayerevents)。
事件系统基于 [`EventEmitter`](../sdk/expo/#eventemittertype) 类以及 [`expo`](../sdk/expo) 包中的 [hooks](../sdk/expo/#hooks)。监听事件有几种方式：

#### `useEvent` hook

创建一个监听器，返回一个可在组件中使用的状态值。它还会在组件卸载时自动清理。

```tsx useEvent
import { useEvent } from 'expo';
// ... 其他导入、组件定义、播放器创建等。

const { status, error } = useEvent(player, 'statusChange', { status: player.status });
// 组件其余部分...
```

#### `useEventListener` hook

基于 `Player.addListener` 和 `Player.removeListener` 方法构建，创建一个带自动清理的事件监听器。

```tsx useEventListener
import { useEventListener } from 'expo';
// ...其他导入、组件定义、播放器创建等。

useEventListener(player, 'statusChange', ({ status, error }) => {
  setPlayerStatus(status);
  setPlayerError(error);
  console.log('播放器状态已更改：', status);
});
// 组件其余部分...
```

#### `Player.addListener` 方法

这是监听事件最灵活的方式，但需要手动清理，并且需要更多样板代码。

```tsx Player.addListener
// ...导入、组件定义、播放器创建等。

useEffect(() => {
  const subscription = player.addListener('statusChange', ({ status, error }) => {
    setPlayerStatus(status);
    setPlayerError(error);
    console.log('播放器状态已更改：', status);
  });

  return () => {
    subscription.remove();
  };
}, []);
// 组件其余部分...
```

### 播放 assets 目录中的本地媒体

`expo-video` 支持播放使用 `require` 函数加载的本地媒体。你可以直接将结果用作源，也可以将其赋值给 [`VideoSource`](#videosource) 的 `assetId` 参数，如果你还想配置其他属性的话。

```tsx 播放本地媒体
import { VideoSource } from 'expo-video';

const assetId = require('./assets/bigbuckbunny.mp4');

const videoSource: VideoSource = {
  assetId,
  metadata: {
    title: 'Big Buck Bunny',
    artist: 'The Open Movie Project',
  },
};

const player1 = useVideoPlayer(assetId); // 你可以直接使用 `asset` 作为视频源
const player2 = useVideoPlayer(videoSource);
```

### 播放媒体库中的媒体

`expo-video` 支持使用 [`expo-media-library`](../sdk/media-library/) 播放从用户媒体库中选取的视频，或任何具有相应权限的有效 `PHAsset` URI。

要播放媒体库中的视频，你应当使用 [`MediaLibrary.getAssetsAsync()`](../sdk/media-library/#medialibrarygetassetsasyncassetsoptions) 获取一个 [`Asset`](../sdk/asset/#asset) 对象，并使用其 [`uri`](../sdk/asset/#uri) 属性作为视频源的 [`uri`](#videosource)。
在播放之前，务必使用 [`MediaLibrary.requestPermissionsAsync()`](../sdk/media-library/#medialibraryrequestpermissionsasyncwriteonly-granularpermissions) 请求所需权限。

在 iOS 上，请务必**不要**使用资产信息中的 `localUri` 属性，因为它不包含读取该资产所需的权限。

```tsx 从媒体库播放媒体
import * as MediaLibrary from 'expo-media-library';
import { VideoSource, useVideoPlayer, VideoView } from 'expo-video';

// ...组件定义、播放器创建等。

const loadAssetAndReplace = async () => {
  const { granted } = await MediaLibrary.requestPermissionsAsync(false, ['video']);
  if (!granted) {
    return;
  }

  const pagedAssets = await MediaLibrary.getAssetsAsync({
    mediaType: 'video',
  });

  if (pagedAssets.assets.length > 0) {
    const [asset] = pagedAssets.assets;
    const videoSource: VideoSource = {
      uri: asset.uri,
      metadata: {
        title: asset.filename,
      },
    };

    await player.replaceAsync(videoSource);
    await player.replaceAsync(asset.uri); // 或者你也可以直接使用 asset uri
    player.play();
  }
};

// 你现在可以使用 loadAssetAndReplace 来加载并播放媒体库中的第一个视频
```

### 预加载视频

当另一个视频正在播放时，可以先加载某个视频，再将其显示到视图中。这样可以让后续视频之间的切换更快，并带来更好的用户体验。

要预加载视频，你需要使用视频源创建一个 `VideoPlayer`。即使播放器没有连接到 `VideoView`，它也会填充缓冲区。一旦它连接到 `VideoView`，就能够在不缓冲的情况下开始播放。

在某些情况下，在屏幕生命周期的稍后阶段预加载视频会更有利。在这种情况下，应创建一个源为 `null` 的 `VideoPlayer`。要开始预加载，可以使用 `replace()` 函数将播放器源替换为视频源。

下面是一个如何预加载视频的示例：

<SnackInline label='预加载视频' dependencies={['expo-video']}>

```tsx
import { useVideoPlayer, VideoView, VideoSource } from 'expo-video';
import { useState, useCallback } from 'react';
import { StyleSheet, Text, TouchableOpacity, View } from 'react-native';

const bigBuckBunnySource: VideoSource =
  'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4';

const elephantsDreamSource: VideoSource =
  'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4';

export default function PreloadingVideoPlayerScreen() {
  const player1 = useVideoPlayer(bigBuckBunnySource, player => {
    player.play();
  });

  const player2 = useVideoPlayer(elephantsDreamSource, player => {
    player.currentTime = 20;
  });

  const [currentPlayer, setCurrentPlayer] = useState(player1);

  const replacePlayer = useCallback(async () => {
    currentPlayer.pause();
    if (currentPlayer === player1) {
      setCurrentPlayer(player2);
      player1.pause();
      player2.play();
    } else {
      setCurrentPlayer(player1);
      player2.pause();
      player1.play();
    }
  }, [player1, currentPlayer]);

  return (
    <View style={styles.contentContainer}>
      <VideoView player={currentPlayer} style={styles.video} nativeControls={false} />
      <TouchableOpacity style={styles.button} onPress={replacePlayer}>
        <Text style={styles.buttonText}>替换播放器</Text>
      </TouchableOpacity>
    </View>
  );
}

const styles = StyleSheet.create({
  contentContainer: {
    flex: 1,
    padding: 10,
    alignItems: 'center',
    justifyContent: 'center',
    paddingHorizontal: 50,
  },
  button: {
    alignItems: 'center',
    justifyContent: 'center',
    borderRadius: 3,
    paddingVertical: 8,
    paddingHorizontal: 12,
    backgroundColor: '#4630ec',
  },
  buttonText: {
    fontSize: 12,
    fontWeight: 'bold',
    color: '#eeeeee',
    textAlign: 'center',
  },
  video: {
    width: 300,
    height: 168.75,
    marginVertical: 20,
  },
});
```

</SnackInline>

### 直接使用 VideoPlayer

在大多数情况下，应使用 [`useVideoPlayer`](#usevideoplayersource-setup-playerbuilderoptions) hook 创建 `VideoPlayer` 实例。它会管理播放器的生命周期，并确保组件卸载时正确释放播放器。不过，在某些高级使用场景中，可能需要创建一个不会在组件卸载时自动销毁的 `VideoPlayer`。
在这些情况下，可以使用 [`createVideoPlayer`](#videocreatevideoplayersource-playerbuilderoptions) 函数创建 `VideoPlayer`。你需要了解这种方式所带来的风险，因为播放器不再需要时，需要由你负责调用 [`release()`](../sdk/expo/#release) 方法。如果处理不当，可能会导致内存泄漏。

```tsx 创建播放器实例
import { createVideoPlayer } from 'expo-video';
const player = createVideoPlayer(videoSource);
```

> **警告** 在 Android 上，使用同一个 `VideoPlayer` 实例同时挂载多个 `VideoView` 组件将无法工作，这是由于 [平台限制](https://github.com/expo/expo/issues/35012)。

### 缓存视频

如果你的应用经常重复播放同一个视频，可以使用缓存来尽量减少网络流量并提升用户体验，代价是会增加设备存储占用。`expo-video` 支持在 `Android` 和 `iOS` 平台上进行视频缓存。通过将 [`VideoSource`](#videosource) 对象的 [`useCaching`](#videosource) 属性设置为 `true` 即可启用此功能。

缓存是持久化的，并且在超过首选大小后会按照最近最少使用原则进行清理。此外，由于存储空间不足，系统也可能清除缓存，因此不建议依赖缓存来存储关键数据。

缓存可离线工作。如果视频的部分或全部内容已被缓存，那么在设备离线时也可以从缓存中播放，直到缓存数据耗尽为止。

> 由于平台限制，iOS 上的 HLS 视频源不能使用缓存。Android 和 iOS 不支持缓存受 DRM 保护的视频。

### 管理缓存

- 可以使用 [`setVideoCacheSizeAsync`](#videosetvideocachesizeasyncsizebytes) 函数定义首选缓存大小（单位：字节）。默认缓存大小为 1GB。
- 可使用 [`getCurrentVideoCacheSize`](#videogetcurrentvideocachesize) 获取当前缓存占用的存储空间（单位：字节）。
- 可使用 [`clearVideoCacheAsync`](#videoclearvideocacheasync) 清除所有已缓存的视频。

## API

```js
import { VideoView, useVideoPlayer } from 'expo-video';
```

<APISection packageName="expo-video" apiName="Video" />
