docs/pages/versions/v56.0.0/sdk/video.mdx
---
title: 视频（expo-video）
description: 一个提供用于在应用中实现视频播放的 API 的库。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-video'
packageName: 'expo-video'
iconUrl: '/static/images/packages/expo-video.png'
platforms: ['android', 'ios', 'web', 'tvos', 'expo-go']
searchRank: 10
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ConfigPluginExample, ConfigPluginProperties } from '~/ui/components/ConfigSection';
import { SnackInline } from '~/ui/components/Snippet';
import { PlatformTags } from '~/ui/components/Tag/PlatformTags';
import { Collapsible } from '~/ui/components/Collapsible';
import { CODE } from '~/ui/components/Text';

`expo-video` 是一个跨平台、高性能的视频组件，适用于 React Native 和 Expo，并支持 Web。

## 已知问题&ensp;<PlatformTags platforms={['android']} />

当两个 [`VideoView`](#videoview) 组件重叠，并且它们的 [`contentFit`](#contentfit) 属性设置为 [`cover`](#videocontentfit) 时，其中一个视频可能会超出边界显示。这是一个[已知的上游问题](https://github.com/androidx/media/issues/1107)。要规避此问题，请使用 [`surfaceType`](#surfacetype) 属性并将其设置为 [`textureView`](#surfacetype-1)。

## 安装

<APIInstallSection />

## 在应用配置中进行配置

如果你的项目使用配置插件（[持续原生生成（CNG）](./workflow/continuous-native-generation/)），你可以使用 `expo-video` 内置的[配置插件](/config-plugins/introduction/)来进行配置。该插件允许你配置一些无法在运行时设置、且需要重新构建新应用二进制文件后才会生效的属性。如果你的应用**不**使用 CNG，那么你需要手动配置该库。

<ConfigPluginExample>
```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-video",
        {
          "supportsBackgroundPlayback": true,
          "supportsPictureInPicture": true
        }
      ]
    ],
  }
}
```
</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'supportsBackgroundPlayback',
      description:
        '一个布尔值，用于启用后台播放支持。如果为 `true`，在 iOS 上会将 `audio` 键添加到 **Info.plist** 文件中的 `UIBackgroundModes` 数组。如果为 `false`，则移除该键。当为 `undefined` 时，不会修改该键。在 Android 上，当为 `true` 时，会添加前台服务权限，并在 AndroidManifest.xml 中创建一个 expo-video 前台服务。',
      default: 'undefined',
    },
    {
      name: 'supportsPictureInPicture',
      description:
        '一个布尔值，用于在 Android 和 iOS 上启用画中画。如果为 `true`，会在 Android 上启用 `android:supportsPictureInPicture` 属性，并在 iOS 的 **Info.plist** 文件中将 `audio` 键添加到 `UIBackgroundModes` 数组中。如果为 `false`，则移除该键。当为 `undefined` 时，不会修改配置。',
      default: 'undefined',
    },
  ]}
/>

## 用法

下面是一个带有播放和暂停按钮的视频简单示例。

<SnackInline label='视频' dependencies={['expo-video']}>

```jsx
import { useEvent } from 'expo';
import { useVideoPlayer, VideoView } from 'expo-video';
import { StyleSheet, View, Button } from 'react-native';

const videoSource =
  'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4';

export default function VideoScreen() {
  const player = useVideoPlayer(videoSource, player => {
    player.loop = true;
    player.play();
  });

  const { isPlaying } = useEvent(player, 'playingChange', { isPlaying: player.playing });

  return (
    <View style={styles.contentContainer}>
      <VideoView
        style={styles.video}
        player={player}
        fullscreenOptions={{ enable: true }}
        allowsPictureInPicture
      />
      <View style={styles.controlsContainer}>
        <Button
          title={isPlaying ? '暂停' : '播放'}
          onPress={() => {
            if (isPlaying) {
              player.pause();
            } else {
              player.play();
            }
          }}
        />
      </View>
    </View>
  );
}

const styles = StyleSheet.create({
  contentContainer: {
    flex: 1,
    padding: 10,
    alignItems: 'center',
    justifyContent: 'center',
    paddingHorizontal: 50,
  },
  video: {
    width: 350,
    height: 275,
  },
  controlsContainer: {
    padding: 10,
  },
});
```

</SnackInline>

### 接收事件

[`VideoPlayer`](#videoplayer) 属性的变化不会更新 React 状态。因此，要显示有关 `VideoPlayer` 当前状态的信息，有必要监听它发出的[事件](#videoplayerevents)。
事件系统基于 [`EventEmitter`](../sdk/expo/#eventemittertype) 类和来自 [`expo`](../sdk/expo) 包的[钩子](../sdk/expo/#hooks)。监听事件有几种方式：

#### `useEvent` 钩子

创建一个监听器，它会返回一个带状态的值，可在组件中使用。组件卸载时也会自动清理。

```tsx useEvent
import { useEvent } from 'expo';
// ... 其他导入、组件定义、创建 player 等。

const { status, error } = useEvent(player, 'statusChange', { status: player.status });
// 组件的其余部分...
```

#### `useEventListener` 钩子

基于 `Player.addListener` 和 `Player.removeListener` 方法，创建一个带自动清理的事件监听器。

```tsx useEventListener
import { useEventListener } from 'expo';
// ...其他导入、组件定义、创建 player 等。

useEventListener(player, 'statusChange', ({ status, error }) => {
  setPlayerStatus(status);
  setPlayerError(error);
  console.log('播放器状态已更改：', status);
});
// 组件的其余部分...
```

#### `Player.addListener` 方法

这是监听事件最灵活的方式，但需要手动清理，并且需要更多样板代码。

```tsx Player.addListener
// ...导入、组件定义、创建 player 等。

useEffect(() => {
  const subscription = player.addListener('statusChange', ({ status, error }) => {
    setPlayerStatus(status);
    setPlayerError(error);
    console.log('播放器状态已更改：', status);
  });

  return () => {
    subscription.remove();
  };
}, []);
// 组件的其余部分...
```

### 从 assets 目录播放本地媒体

`expo-video` 支持播放使用 `require` 函数加载的本地媒体。你可以直接将结果用作源，也可以在希望配置其他属性时，将其赋值给 [`VideoSource`](#videosource) 的 `assetId` 参数。

```tsx 播放本地媒体
import { VideoSource } from 'expo-video';

const assetId = require('./assets/bigbuckbunny.mp4');

const videoSource: VideoSource = {
  assetId,
  metadata: {
    title: 'Big Buck Bunny',
    artist: 'The Open Movie Project',
  },
};

const player1 = useVideoPlayer(assetId); // 你可以直接将 `asset` 作为视频源使用
const player2 = useVideoPlayer(videoSource);
```

### 从媒体库播放媒体

`expo-video` 支持通过 [`expo-media-library/legacy`](../sdk/media-library-legacy/) 或任何具有相应权限的有效 `PHAsset` URI 播放从用户媒体库中选择的视频。

要从媒体库播放视频，你应通过 [`MediaLibrary.getAssetsAsync()`](../sdk/media-library-legacy/#medialibrarygetassetsasyncassetsoptions) 获取一个 [`Asset`](../sdk/asset/#asset) 对象，并将其 [`uri`](../sdk/asset/#uri) 属性作为视频源的 [`uri`](#videosource) 使用。
在播放之前，请确保使用 [`MediaLibrary.requestPermissionsAsync()`](../sdk/media-library-legacy/#medialibraryrequestpermissionsasyncwriteonly-granularpermissions) 请求所需权限。

在 iOS 上，请确保**不要**使用资源信息中的 `localUri` 属性，因为它不包含读取该资源所需的权限。

```tsx 从媒体库播放媒体
import * as MediaLibrary from 'expo-media-library/legacy';
import { VideoSource, useVideoPlayer, VideoView } from 'expo-video';

// ...组件定义、创建 player 等。

const loadAssetAndReplace = async () => {
  const { granted } = await MediaLibrary.requestPermissionsAsync(false, ['video']);
  if (!granted) {
    return;
  }

  const pagedAssets = await MediaLibrary.getAssetsAsync({
    mediaType: 'video',
  });

  if (pagedAssets.assets.length > 0) {
    const [asset] = pagedAssets.assets;
    const videoSource: VideoSource = {
      uri: asset.uri,
      metadata: {
        title: asset.filename,
      },
    };

    await player.replaceAsync(videoSource);
    await player.replaceAsync(asset.uri); // 或者你也可以直接使用 asset uri
    player.play();
  }
};

// 现在你可以使用 loadAssetAndReplace 来加载并播放媒体库中的第一个视频
```

### 预加载视频

在另一个视频播放时，可以先加载一个视频，再将其显示在视图中。这样可以加快后续视频之间的切换，并提升用户体验。

要预加载视频，你需要使用一个视频源创建 `VideoPlayer`。即使播放器没有连接到 `VideoView`，它也会填充缓冲区。一旦连接到 `VideoView`，就能够在无需缓冲的情况下开始播放。

在某些情况下，在屏幕生命周期的稍后阶段预加载视频会更有利。在这种情况下，应创建一个源为 `null` 的 `VideoPlayer`。要开始预加载，可以使用 `replace()` 函数将播放器源替换为视频源。

下面是如何预加载视频的示例：

<SnackInline label='预加载视频' dependencies={['expo-video']}>

```tsx
import { useVideoPlayer, VideoView, VideoSource } from 'expo-video';
import { useState, useCallback } from 'react';
import { StyleSheet, Text, TouchableOpacity, View } from 'react-native';

const bigBuckBunnySource: VideoSource =
  'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4';

const elephantsDreamSource: VideoSource =
  'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4';

export default function PreloadingVideoPlayerScreen() {
  const player1 = useVideoPlayer(bigBuckBunnySource, player => {
    player.play();
  });

  const player2 = useVideoPlayer(elephantsDreamSource, player => {
    player.currentTime = 20;
  });

  const [currentPlayer, setCurrentPlayer] = useState(player1);

  const replacePlayer = useCallback(async () => {
    currentPlayer.pause();
    if (currentPlayer === player1) {
      setCurrentPlayer(player2);
      player1.pause();
      player2.play();
    } else {
      setCurrentPlayer(player1);
      player2.pause();
      player1.play();
    }
  }, [player1, currentPlayer]);

  return (
    <View style={styles.contentContainer}>
      <VideoView player={currentPlayer} style={styles.video} nativeControls={false} />
      <TouchableOpacity style={styles.button} onPress={replacePlayer}>
        <Text style={styles.buttonText}>替换播放器</Text>
      </TouchableOpacity>
    </View>
  );
}

const styles = StyleSheet.create({
  contentContainer: {
    flex: 1,
    padding: 10,
    alignItems: 'center',
    justifyContent: 'center',
    paddingHorizontal: 50,
  },
  button: {
    alignItems: 'center',
    justifyContent: 'center',
    borderRadius: 3,
    paddingVertical: 8,
    paddingHorizontal: 12,
    backgroundColor: '#4630ec',
  },
  buttonText: {
    fontSize: 12,
    fontWeight: 'bold',
    color: '#eeeeee',
    textAlign: 'center',
  },
  video: {
    width: 300,
    height: 168.75,
    marginVertical: 20,
  },
});
```

</SnackInline>

### 直接使用 VideoPlayer

在大多数情况下，应使用 [`useVideoPlayer`](#usevideoplayersource-setup-playerbuilderoptions) hook 创建 `VideoPlayer` 实例。它会管理播放器的生命周期，并确保组件卸载时正确释放播放器。不过，在某些高级用例中，可能需要创建一个不会在组件卸载时自动销毁的 `VideoPlayer`。
在这些情况下，可以使用 [`createVideoPlayer`](#videocreatevideoplayersource-playerbuilderoptions) 函数创建 `VideoPlayer`。需要注意这种方式带来的风险，因为当播放器不再需要时，您需要负责调用 [`release()`](../sdk/expo/#release) 方法。如果处理不当，这种方式可能会导致内存泄漏。

```tsx 创建播放器实例
import { createVideoPlayer } from 'expo-video';
const player = createVideoPlayer(videoSource);
```

> **警告** 在 Android 上，由于[平台限制](https://github.com/expo/expo/issues/35012)，同时挂载多个使用同一个 `VideoPlayer` 实例的 `VideoView` 组件将无法工作。

### 缓存视频

如果你的应用经常重复播放同一个视频，可以利用缓存来尽量减少网络使用并提升用户体验，但代价是会增加设备存储占用。`expo-video` 支持在 `Android` 和 `iOS` 平台上进行视频缓存。可通过将 [`VideoSource`](#videosource) 对象的 [`useCaching`](#videosource) 属性设置为 `true` 来启用此功能。

缓存是持久化的，并且在超过首选大小后会按最近最少使用原则清理。此外，系统也可能因存储空间不足而清理缓存，因此不建议依赖缓存来存储关键数据。

缓存可离线工作。如果视频的一部分或全部已被缓存，则即使设备离线，也可以从缓存中播放，直到缓存数据耗尽。

> 由于平台限制，iOS 上无法将缓存用于 HLS 视频源。Android 和 iOS 都不支持缓存受 DRM 保护的视频。

### 管理缓存

- 可使用 [`setVideoCacheSizeAsync`](#videosetvideocachesizeasyncsizebytes) 函数定义首选的缓存大小（以字节为单位）。默认缓存大小为 1GB。
- 可使用 [`getCurrentVideoCacheSize`](#videogetcurrentvideocachesize) 获取当前缓存占用的字节数。
- 可使用 [`clearVideoCacheAsync`](#videoclearvideocacheasync) 函数清除所有已缓存的视频。

### 拦截原生资源加载

<Collapsible summary={<>这是一个面向高级用户的原生 <CODE>expo-video</CODE> 功能。展开以了解更多。</>}>
#### 简介

`expo-video` 在 iOS 上包含一个名为 `VideoAssetTransportProvider` 的原生扩展点。它允许你拦截特定的视频源，自定义底层 `AVURLAsset` 的创建方式，并覆盖其数据加载方式。

当某个源无法被 `AVKit` 直接处理并且需要原生预处理时，这非常有用。例如，提供者可以重写 URL、附加自定义的 `AVAssetResourceLoaderDelegate`、启动本地代理服务器，或在播放开始前将一种流媒体格式转换为另一种。

提供者会在模块启动时注册到 `VideoAssetTransportRegistry` 中。当 `expo-video` 加载某个源时，它会创建一个 `VideoAssetSourceDescriptor`，并按优先级顺序询问已注册的提供者是否愿意处理该源。返回第一个 `VideoAssetLoadPlan` 的提供者将被使用。

此 API 面向高级原生集成。它需要自定义原生模块，因此在 Expo Go 中不可用。请改用开发构建。

#### 可自定义的属性

主要的自定义点是 `VideoAssetTransportProvider` 上的字段，以及它返回的 `VideoAssetLoadPlan` 上的字段。

`VideoAssetTransportProvider` 允许你控制以下属性：

| 属性 | 说明 |
| -------------------- | --------------------------------------------------------------------------------------------------------------------------- |
| `identifier`         | 提供者的稳定名称。用于替换或注销提供者时。                                      |
| `priority`           | 当多个提供者匹配同一个源时，哪个提供者获胜。数值越高优先级越高。                             |
| `makeLoadPlan(for:)` | 匹配和配置入口。返回 `nil` 以忽略某个源，或返回 `VideoAssetLoadPlan` 以处理它。 |

`VideoAssetLoadPlan` 允许你通过以下属性控制 `expo-video` 如何构建和管理资源：

| 属性 | 说明 |
| ------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `assetURL`                | 用于初始化底层 `AVURLAsset` 的 URL。可以是原始源 URL，也可以是特定传输方式的替代 URL，例如重写后的 scheme、本地代理 URL 或生成的播放列表 URL。 |
| `assetOptions`            | 可选的 `AVURLAsset` 初始化选项。用于覆盖 `expo-video` 通常会根据源推导出的默认选项。                                                         |
| `reportedContentTypeHint` | 可选的内容类型，用于描述 `assetURL` 的实际播放格式。当传输方式改变了源类型时设置此项，例如将 DASH 转换为 HLS。                            |
| `resourceLoaderDelegate`  | 可选的 `AVAssetResourceLoaderDelegate`，应附加到资源加载器上。                                                                                                     |
| `resourceLoaderQueue`     | 可选的调度队列，`resourceLoaderDelegate` 应在其上接收回调。                                                                                                                     |
| `prepareAsset`            | 在 `expo-video` 主动加载资源属性之前要运行的可选异步工作。可用于传输启动，例如获取清单或启动本地服务器。                                  |
| `retainedObjects`         | 可选的辅助对象数组，它们必须在资源生命周期内保持存活，例如本地 HTTP 服务器、解析器或传输状态所有者。                                                    |
| `attachErrorHandler`      | 一个可选钩子，允许传输在加载计划应用后将异步错误回传给 `expo-video`。                                                                       |
| `onAssetDeinit`           | 当 `VideoAsset` 被释放时要执行的可选清理工作。                                                                                                                                           |

#### 实现与使用

典型设置如下：

1. 使用 [`create-expo-module`](/modules/get-started/) 创建一个 Expo 模块。
2. 添加一个符合 `VideoAssetTransportProvider` 的类。
3. 在模块的 `OnCreate` 块中注册该提供者。
4. 构建应用，使原生模块被编译进你的项目。

如果你只需要在单个应用中使用该提供者，请使用 [本地 Expo 模块](/modules/get-started/#add-a-new-module-to-an-existing-application) 流程。

如果你想在多个应用中复用该提供者，请改用 [独立 Expo 模块](/modules/get-started/#create-a-new-module-with-an-example-project) 流程。

#### 基础使用示例

1. 定义提供者和加载计划。创建模块后，添加一个符合 `VideoAssetTransportProvider` 的类。在 `makeLoadPlan(for:)` 中检查 `VideoAssetSourceDescriptor`，并对不想处理的源返回 `nil`。

```swift
import ExpoVideo

final class ExampleVideoTransportProvider: VideoAssetTransportProvider {
  static let providerIdentifier = "com.example.video-transport"

  let identifier = Self.providerIdentifier
  let priority = 500

  func makeLoadPlan(for source: VideoAssetSourceDescriptor) -> VideoAssetLoadPlan? {
    guard source.contentTypeHint == .dash, source.url.pathExtension == "mpd" else {
      return nil
    }

    let transformedURL = URL(string: "http://127.0.0.1:8080/master.m3u8")!

    return VideoAssetLoadPlan(
      assetURL: transformedURL,
      reportedContentTypeHint: .hls
    )
  }
}
```

2. 要注册该提供者，推荐在 Expo 模块的 `OnCreate` 块中注册。这可确保在视频开始加载之前提供者已可用。

```swift
import ExpoModulesCore
import ExpoVideo

public final class CustomVideoTransportModule: Module {
  public func definition() -> ModuleDefinition {
    Name("CustomVideoTransport")

    OnCreate {
      VideoAssetTransportRegistry.registerProvider(ExampleVideoTransportProvider())
    }

    OnDestroy {
      VideoAssetTransportRegistry.unregisterProvider(
        withId: ExampleVideoTransportProvider.providerIdentifier
      )
    }
  }
}
```

#### 完整示例

你可以参考以下完整示例，更好地理解如何使用此 API。

- [基础 DASH 支持提供者](https://github.com/expo/expo/tree/main/apps/bare-expo/modules/expo-video-dash-support-module) - Bare Expo 中的一个本地模块，为 iOS 上的 `expo-video` 提供有限的 DASH 支持。
- [`expo-video` iOS 缓存](https://github.com/expo/expo/blob/main/packages/expo-video/ios/Cache/CacheVideoAssetTransportProvider.swift) - 内置缓存提供者的实现。

</Collapsible>

## API

```js
import { VideoView, useVideoPlayer } from 'expo-video';
```

<APISection packageName="expo-video" apiName="Video" />
